; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_common.c_b53_phy_read16.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_common.c_b53_phy_read16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.switch_dev = type { i32 }
%struct.b53_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.b53_device*, i32, i32, i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.switch_dev*, i32, i32, i32*)* @b53_phy_read16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b53_phy_read16(%struct.switch_dev* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.switch_dev*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.b53_device*, align 8
  store %struct.switch_dev* %0, %struct.switch_dev** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %11 = load %struct.switch_dev*, %struct.switch_dev** %6, align 8
  %12 = call %struct.b53_device* @sw_to_b53(%struct.switch_dev* %11)
  store %struct.b53_device* %12, %struct.b53_device** %10, align 8
  %13 = load %struct.b53_device*, %struct.b53_device** %10, align 8
  %14 = getelementptr inbounds %struct.b53_device, %struct.b53_device* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (%struct.b53_device*, i32, i32, i32*)*, i32 (%struct.b53_device*, i32, i32, i32*)** %16, align 8
  %18 = icmp ne i32 (%struct.b53_device*, i32, i32, i32*)* %17, null
  br i1 %18, label %19, label %30

19:                                               ; preds = %4
  %20 = load %struct.b53_device*, %struct.b53_device** %10, align 8
  %21 = getelementptr inbounds %struct.b53_device, %struct.b53_device* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32 (%struct.b53_device*, i32, i32, i32*)*, i32 (%struct.b53_device*, i32, i32, i32*)** %23, align 8
  %25 = load %struct.b53_device*, %struct.b53_device** %10, align 8
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32*, i32** %9, align 8
  %29 = call i32 %24(%struct.b53_device* %25, i32 %26, i32 %27, i32* %28)
  store i32 %29, i32* %5, align 4
  br label %37

30:                                               ; preds = %4
  %31 = load %struct.b53_device*, %struct.b53_device** %10, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @B53_PORT_MII_PAGE(i32 %32)
  %34 = load i32, i32* %8, align 4
  %35 = load i32*, i32** %9, align 8
  %36 = call i32 @b53_read16(%struct.b53_device* %31, i32 %33, i32 %34, i32* %35)
  store i32 %36, i32* %5, align 4
  br label %37

37:                                               ; preds = %30, %19
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local %struct.b53_device* @sw_to_b53(%struct.switch_dev*) #1

declare dso_local i32 @b53_read16(%struct.b53_device*, i32, i32, i32*) #1

declare dso_local i32 @B53_PORT_MII_PAGE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
